--- a/exmoor.html
+++ b/exmoor.html
@@ -4,20 +4,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="x-ua-compatible" content="IE=edge">
-    <!--WS3 Css, provide slideshow animation-->
+    <!--WS3 Css, slideshow animation-->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <!--font awesome, provides social media icons-->
+    <!--font awesome, social media icons-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-    <!--css, provide color& animation-->
+    <!--css, color& animation-->
     <link href="assets/css/style.css" rel="stylesheet">
     <title>Exmoor National Park</title>
-    <!--Favicon 32x32-->
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
     <!--Favicon 16x16, site icon-->
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
   </head>
   <body>
-    <!--Navigation, at the top of page for ease of use. Code adapted from WS3 schools - https://www.w3schools.com/howto/howto_js_topnav.asp-->
+  <!--see homepage or readme for sources-->
+    <!--Navigation, at the top of page for ease of use-->
     <nav class="topnav">
       <a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
       <div class="dropdown">
@@ -41,7 +40,7 @@
         <h4>Explore the best trails one step at a time</h4>
       </div>
     </section>
-    <!--Slideshow section, provide user different images of trail -->
+    <!--Slideshow section, different images of trail -->
     <div class="container">
       <div>
         <br>
@@ -50,7 +49,6 @@
       </div>
     </div>
     <br>
-    <!--Code adapted from WS3 schools - https://www.w3schools.com/howto/howto_js_slideshow.asp-->
     <div class="slideshow-container">
       <div class="mySlides fade">
         <div class="numbertext">1 / 3</div>
@@ -66,14 +64,13 @@
       </div>
     </div>
     <br>
-    <!--Inform user of which slide is active-->
     <div style="text-align:center">
       <span class="dot"></span>
       <span class="dot"></span>
       <span class="dot"></span>
     </div>
     <br>
-    <!--map, displays the physical location of the trail-->
+    <!--map, displays location of the trail-->
     <section>
       <h2>Exmoor National Park Map</h2>
       <br>
@@ -81,7 +78,7 @@
       </div>
     </section>
     <br>
-    <!--Bottom navigation, for user flexibility. Code adapted from WS3 Schools - https://www.w3schools.com/howto/howto_css_dropup.asp-->
+    <!--Bottom navigation, for user flexibility-->
     <section class="bottom-nav">
       <h6>Explore our trails</h6>
       <div class="dropup">
@@ -98,11 +95,11 @@
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </section>
     <br>
-    <!--Scroll back to top button. Code adapted from WS3 schools - https://www.w3schools.com/howto/howto_js_scroll_to_top.asp-->
+    <!--Scroll back to top button-->
     <div>
       <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     </div>
-    <!--Footer section, display social media& informs viewer they have reached end of page-->
+    <!--Footer section, display social media& end of page-->
     <footer class="footer">
       <div class="align-vertically">
         <div class="other-trails">
@@ -122,7 +119,7 @@
           ["Exmoor National Park", 51.040565, -3.5551257, 4],
       ];
       var map;
-      //create map object, call id map and add elements to map object such as latitude& longitude
+      //create map object
       function initMap() {
           map = new google.maps.Map(document.getElementsByClassName("map-custom")[0], {
               center: { lat: 51.180000, lng: -3.000000 },
@@ -138,7 +135,7 @@
                   position: new google.maps.LatLng(locations[i][1], locations[i][2]),
                   map: map
               });
-              //add event listener, set markers to individual locations
+              //add event listener, set markers to locations
               google.maps.event.addListener(marker, "click", (function (marker, i) {
                   return function () {
                       infowindow.setContent(locations[i][0]);
