remove _blank from social media icons

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link id="favicon" rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
   </head>
   <body>
-    <!--sources used on features, applied to every page:-->
+    <!--sources used on features, apply to every page:-->
     <!--nav-bar: https://www.w3schools.com/howto/howto_js_topnav.asp-->
     <!--slideshow: https://www.w3schools.com/howto/howto_js_slideshow.asp-->
     <!--scroll btn: https://www.w3schools.com/howto/howto_js_scroll_to_top.asp-->
@@ -138,9 +138,9 @@
           <span><img title="Somerset Trails" class="logo" src="https://c0.wallpaperflare.com/preview/461/570/413/exmoor-pony-pony-horse-exmoor.jpg" alt="Site logo"></span>
           <span><a href="index.html" title="Home"
             rel="noopener"><i class="fa fa-home"></i></a></span>
-          <span><a href="https://www.facebook.com/" title="Facebook" target="_blank"
+          <span><a href="https://www.facebook.com/" title="Facebook"
             rel="noopener"><i class="fab fa-facebook-square"></i></a></span>
-          <span><a href="https://twitter.com/explore" title="Twitter" target="_blank"
+          <span><a href="https://twitter.com/explore" title="Twitter"
             rel="noopener"><i class="fab fa-twitter-square"></i></a></span>
         </div>
       </div>
