--- a/cheddar-gorge.html
+++ b/cheddar-gorge.html
@@ -12,7 +12,7 @@
     <link href="assets/css/style.css" rel="stylesheet">
     <title>Cheddar gorge</title>
     <!--Favicon 16x16, site icon-->
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
+    <link id="favicon" rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
   </head>
   <body>
   <!--homepage or readme for sources-->
@@ -106,9 +106,9 @@
           <span><img title="Somerset Trails" class="logo" src="https://c0.wallpaperflare.com/preview/461/570/413/exmoor-pony-pony-horse-exmoor.jpg" alt="Site logo"></span>
           <span><a href="index.html" title="Home" 
             rel="noopener"><i class="fa fa-home"></i></a></span>
-          <span><a href="https://www.facebook.com/" title="Facebook" target="_blank"
+          <span><a href="https://www.facebook.com/" title="Facebook"
             rel="noopener"><i class="fab fa-facebook-square"></i></a></span>
-          <span><a href="https://twitter.com/explore" title="Twitter" target="_blank"
+          <span><a href="https://twitter.com/explore" title="Twitter"
             rel="noopener"><i class="fab fa-twitter-square"></i></a></span>
         </div>
       </div>
