edit website resource links in homepage

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   </head>
   <body>
     <!--sources used on features, apply to every page:-->
-    <!--nav-bar: https://www.w3schools.com/howto/howto_js_topnav.asp-->
+    <!--nav-bar: https://www.w3schools.com/howto/howtojstopnav.asp-->
     <!--slideshow: https://www.w3schools.com/howto/howto_js_slideshow.asp-->
-    <!--scroll btn: https://www.w3schools.com/howto/howto_js_scroll_to_top.asp-->
+    <!--scroll btn: https://www.w3schools.com/howto/howtojsscroll_to_top.asp-->
     <!--bottom nav: https://www.w3schools.com/howto/howto_css_dropup.asp -->
     <!--maps: https://developers.google.com/maps/documentation-->
     <!--https://developer.mozilla.org/en-US/docs/Web/API/EventTarget/addEventListener-->
