update credit to code resource links in homepage

--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
   </head>
   <body>
     <!--sources used on features, apply to every page:-->
-    <!--nav-bar: https://www.w3schools.com/howto/howtojstopnav.asp-->
-    <!--slideshow: https://www.w3schools.com/howto/howto_js_slideshow.asp-->
-    <!--scroll btn: https://www.w3schools.com/howto/howtojsscroll_to_top.asp-->
-    <!--bottom nav: https://www.w3schools.com/howto/howto_css_dropup.asp -->
-    <!--maps: https://developers.google.com/maps/documentation-->
-    <!--https://developer.mozilla.org/en-US/docs/Web/API/EventTarget/addEventListener-->
+    <!--credit w3s schools for navigation bar, slideshow, bottom navigation and scroll to top btn code - 
+    visit them here: 
+    https://www.w3schools.com-->
+    <!--credit google developer& mozilla for help& implementing google maps - 
+    visit them here:
+     https://developers.google.com/maps/documentation& 
+    https://developer.mozilla.org/en-US/docs/Web/API/EventTarget/addEventListener-->
     <!--Navigation, at the top of page for ease of use-->
     <nav class="topnav">
       <a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
