--- a/blagdon.html
+++ b/blagdon.html
@@ -122,7 +122,7 @@
       function initMap() {
       map = new google.maps.Map(document.getElementsByClassName("map-custom")[0], {
           center: { lat: 51.180000, lng: -3.000000 },
-          zoom: 9
+          zoom: 10
       });
       //call map window& create marker variable
       var infowindow = new google.maps.InfoWindow();
@@ -145,7 +145,7 @@
       }
     </script>
     <!--Jquery-->
-    <script src="https://code.jquery.com/jqueryg-3.5.1.min.js"
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!--Navigation, slideshow, scroll& text JS-->
     <script src="scripts/js/app.js"></script>
