--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link id="favicon" rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
   </head>
   <body>
-    <!--please visit readme.md for resource credits->
+    <!--please visit readme.md for resource credits-->
       <!--Navigation, at the top of page for ease of use-->
     <nav class="topnav">
       <a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
