add comments creditting resources that code was taken from

--- a/blagdon.html
+++ b/blagdon.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!--Navigation, at the top of page for ease of use-->
-    <nav class="topnav">
+    <nav class="topnav"><!--code adapted from w3s schools-->
       <a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
       <div class="dropdown">
         <button class="dropbtn">Somerset Trails
@@ -46,6 +46,7 @@
         <br>
         <h2>Explore Blagdon Lake below:</h2>
         <br>
+        <!--code adapted from w3s schools-->
       </div>
     </div>
     <br>
@@ -78,6 +79,7 @@
     </section>
     <br>
     <!--Bottom navigation, for user flexibility-->
+    <!--code adapted from w3s schools-->
     <section class="bottom-nav">
       <h6>Explore our trails</h6>
       <div class="dropup">
@@ -95,6 +97,7 @@
     </section>
     <br>
     <!--Scroll back to top button-->
+    <!--code adapted from w3s schools-->
     <div>
       <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     </div>
@@ -113,6 +116,7 @@
       </div>
     </footer>
     <!--Scripts-->
+    <!--code adapted from google developers-->
     <script>
       var locations = [
       ["Blagdon Lake", 51.3348101, -2.7040838, 2],
