--- a/exmoor.html
+++ b/exmoor.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <!--Navigation, at the top of page for ease of use-->
+    <!--code adapted from w3s schools-->
     <nav class="topnav">
       <a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
       <div class="dropdown">
@@ -45,6 +46,7 @@
         <br>
         <h2>Explore the Exmoor National Park below:</h2>
         <br>
+        <!--code adapted from w3s schools-->
       </div>
     </div>
     <br>
@@ -78,6 +80,7 @@
     </section>
     <br>
     <!--Bottom navigation, for user flexibility-->
+    <!--code adapted from w3s schools-->
     <section class="bottom-nav">
       <h6>Explore our trails</h6>
       <div class="dropup">
@@ -95,6 +98,7 @@
     </section>
     <br>
     <!--Scroll back to top button-->
+    <!--code adapted from w3s schools-->
     <div>
       <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     </div>
@@ -113,6 +117,7 @@
       </div>
     </footer>
     <!--scripts-->
+    <!--code adapted from google developers-->
     <script>
       var locations = [
           ["Exmoor National Park", 51.040565, -3.5551257, 4],
