--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <!--please visit readme.md for resource credits-->
       <!--Navigation, at the top of page for ease of use-->
-    <nav class="topnav">
+    <nav class="topnav"><!--Navigation Code adapted from WS3 schools-->
       <a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
       <div class="dropdown">
         <button class="dropbtn">Somerset Trails
@@ -50,6 +50,7 @@
       </div>
     </div>
     <br>
+    <!--code adapted from w3s schools-->
     <div class="slideshow-container">
       <div class="mySlides fade">
         <div class="numbertext">2 / 6</div>
@@ -106,6 +107,7 @@
     </section>
     <br>
     <!--Bottom navigation, access different pages.-->
+    <!--Code adapted from ws3 schools-->
     <section class="bottom-nav">
       <h6>Our trails</h6>
       <div class="dropup">
@@ -122,6 +124,7 @@
     </section>
     <br>
     <!--Scroll back to top button, ease of use-->
+    <!--code adapted from w3s schools-->
     <div>
       <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     </div>
@@ -141,6 +144,7 @@
     </footer>
     <!--scripts-->
     <script>
+    //code adapted from google developers documentation
       //create locations object
         var locations = [
         ["Exmoor National Park", 51.040565, -3.5551257, 4],
