--- a/cheddar-gorge.html
+++ b/cheddar-gorge.html
@@ -17,7 +17,7 @@
   <body>
     <!--homepage or readme for sources-->
     <!--navigation top of page, for ease of use-->
-    <nav class="topnav">
+    <nav class="topnav"><!--code adapted from w3s schools-->
       <a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
       <div class="dropdown">
         <button class="dropbtn">Somerset Trails
@@ -47,6 +47,7 @@
         <br>
         <h2>Explore Cheddar Gorge below:</h2>
         <br>
+        <!--code adapted from w3s schools-->
       </div>
     </div>
     <br>
@@ -79,6 +80,7 @@
     </section>
     <br>
     <!--Bottom navigation, for user flexibility-->
+    <!--code adapted from w3s schools-->
     <section class="bottom-nav">
       <h6>Explore our trails</h6>
       <div class="dropup">
@@ -96,6 +98,7 @@
     </section>
     <br>
     <!--Scroll back to top button-->
+    <!--code adapted from w3s schools-->
     <div>
       <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     </div>
@@ -114,6 +117,7 @@
       </div>
     </footer>
     <!--scripts-->
+    <!--code adapted from google developers-->
     <script>
       var locations = [
       ["Cheddar Gorge", 51.2863881, -2.7690326, 1]
