--- a/somerset-coastal.html
+++ b/somerset-coastal.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <!--Navigation, at the top of page for ease of use-->
+    <!--code adapted from w3s schools-->
     <nav class="topnav">
       <a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
       <div class="dropdown">
@@ -48,6 +49,7 @@
         <br>
       </div>
     </div>
+    <!--code adapted from w3s schools-->
     <br>
     <div class="slideshow-container">
       <div class="mySlides fade">
@@ -78,6 +80,7 @@
     </section>
     <br>
     <!--Bottom navigation, for user flexibility-->
+    <!--code adapted from w3s schools-->
     <section class="bottom-nav">
       <h6>Explore our trails</h6>
       <div class="dropup">
@@ -94,6 +97,7 @@
     </section>
     <br>
     <!--Scroll back to top button-->
+    <!--code adapted from w3s schools-->
     <div>
       <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     </div>
@@ -112,6 +116,7 @@
       </div>
     </footer>
     <!--Scripts-->
+    <!--code adapted from w3s schools-->
     <script>
       var locations = [
           ["Somerset Coastal Path", 51.2072165, -3.4641482, 5],
