Remove inline slide legth& add break-points

--- a/somerset-coastal.html
+++ b/somerset-coastal.html
@@ -54,15 +54,15 @@
     <div class="slideshow-container">
       <div class="mySlides fade">
         <div class="numbertext">1 / 3</div>
-        <img src="assets/images/slideshow/coastal/coastal-path01.jpg" alt="Somerset Coastal Path" style="width:100%">
+        <img src="assets/images/slideshow/coastal/coastal-path01.jpg" alt="Somerset Coastal Path">
       </div>
       <div class="mySlides fade">
         <div class="numbertext">2 / 3</div>
-        <img src="assets/images/slideshow/coastal/coastal-path02.jpg" alt="Somerset Coastal Path" style="width:100%">
+        <img src="assets/images/slideshow/coastal/coastal-path02.jpg" alt="Somerset Coastal Path">
       </div>
       <div class="mySlides fade">
         <div class="numbertext">3 / 3</div>
-        <img src="assets/images/slideshow/coastal/coastal-path03.jpg" alt="Somerset Coastal Path" style="width:100%">
+        <img src="assets/images/slideshow/coastal/coastal-path03.jpg" alt="Somerset Coastal Path">
       </div>
     </div>
     <br>
