--- a/cheddar-gorge.html
+++ b/cheddar-gorge.html
@@ -54,15 +54,15 @@
     <div class="slideshow-container">
       <div class="mySlides fade">
         <div class="numbertext">1 / 3</div>
-        <img src="assets/images/slideshow/gorge/gorge01.jpg" alt="Cheddar Gorge" style="width:100%">
+        <img src="assets/images/slideshow/gorge/gorge01.jpg" alt="Cheddar Gorge">
       </div>
       <div class="mySlides fade">
         <div class="numbertext">2 / 3</div>
-        <img src="assets/images/slideshow/gorge/gorge02.jpg" alt="Cheddar Gorge" style="width:100%">
+        <img src="assets/images/slideshow/gorge/gorge02.jpg" alt="Cheddar Gorge">
       </div>
       <div class="mySlides fade">
         <div class="numbertext">3 / 3</div>
-        <img src="assets/images/slideshow/gorge/gorge03.jpg" alt="Cheddar Gorge" style="width:100%">
+        <img src="assets/images/slideshow/gorge/gorge03.jpg" alt="Cheddar Gorge">
       </div>
     </div>
     <br>
