--- a/exmoor.html
+++ b/exmoor.html
@@ -53,15 +53,15 @@
     <div class="slideshow-container">
       <div class="mySlides fade">
         <div class="numbertext">1 / 3</div>
-        <img src="assets/images/slideshow/slide-exmoor/exmoor01.jpg" alt="Exmoor National Park" style="width:100%">
+        <img src="assets/images/slideshow/slide-exmoor/exmoor01.jpg" alt="Exmoor National Park">
       </div>
       <div class="mySlides fade">
         <div class="numbertext">2 / 3</div>
-        <img src="assets/images/slideshow/slide-exmoor/exmoor02.jpg" alt="Exmoor National Park" style="width:100%">
+        <img src="assets/images/slideshow/slide-exmoor/exmoor02.jpg" alt="Exmoor National Park">
       </div>
       <div class="mySlides fade">
         <div class="numbertext">3 / 3</div>
-        <img src="assets/images/slideshow/slide-exmoor/exmoor03.jpg" alt="Exmoor National Park" style="width:100%">
+        <img src="assets/images/slideshow/slide-exmoor/exmoor03.jpg" alt="Exmoor National Park">
       </div>
     </div>
     <br>
