--- a/staple.html
+++ b/staple.html
@@ -54,15 +54,15 @@
     <div class="slideshow-container">
       <div class="mySlides fade">
         <div class="numbertext">1 / 3</div>
-        <img src="assets/images/slideshow/staple/staple01.jpg" style="width:100%" alt="Staple Hill">
+        <img src="assets/images/slideshow/staple/staple01.jpg" alt="Staple Hill">
       </div>
       <div class="mySlides fade">
         <div class="numbertext">2 / 3</div>
-        <img src="assets/images/slideshow/staple/staple02.jpg" style="width:100%" alt="Staple Hill">
+        <img src="assets/images/slideshow/staple/staple02.jpg" alt="Staple Hill">
       </div>
       <div class="mySlides fade">
         <div class="numbertext">3 / 3</div>
-        <img src="assets/images/slideshow/staple/staple03.jpg" style="width:100%" alt="Staple Hill">
+        <img src="assets/images/slideshow/staple/staple03.jpg" alt="Staple Hill">
       </div>
     </div>
     <br>
