Update comments& navigation in mobile

--- a/exmoor.html
+++ b/exmoor.html
@@ -16,13 +16,13 @@
   </head>
   <body>
     <!--Navigation, at the top of page for ease of use-->
-    <!--code adapted from w3s schools-->
     <nav class="topnav">
       <a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
       <div class="dropdown">
         <button class="dropbtn">Somerset Trails
         <i class="fa fa-caret-down"></i>
         </button>
+        <!--Code adapted from ws3 schools-->
         <div class="dropdown-content">
           <a href="staple.html" title="Staple Hill">Staple Hill</a>
           <a href="cheddar-gorge.html" title="Cheddar Gorge">Cheddar Gorge</a>
@@ -80,10 +80,10 @@
     </section>
     <br>
     <!--Bottom navigation, for user flexibility-->
-    <!--code adapted from w3s schools-->
     <section class="bottom-nav">
       <h6>Explore our trails</h6>
       <div class="dropup">
+      <!--Code adapted from ws3 schools-->
         <button class="dropbtn">Explore</button>
         <div class="dropup-content">
           <a href="index.html" title="Home">Home</a>
@@ -98,7 +98,6 @@
     </section>
     <br>
     <!--Scroll back to top button-->
-    <!--code adapted from w3s schools-->
     <div>
       <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     </div>
