--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <!--please visit readme.md for resource credits-->
       <!--Navigation, at the top of page for ease of use-->
-    <nav class="topnav"><!--Navigation Code adapted from WS3 schools-->
+    <nav class="topnav">
       <a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
       <div class="dropdown">
         <button class="dropbtn">Somerset Trails
@@ -107,9 +107,9 @@
     </section>
     <br>
     <!--Bottom navigation, access different pages.-->
-    <!--Code adapted from ws3 schools-->
     <section class="bottom-nav">
       <h6>Our trails</h6>
+      <!--Code adapted from ws3 schools-->
       <div class="dropup">
         <button class="dropbtn">Explore</button>
         <div class="dropup-content">
