--- a/exmoor.html
+++ b/exmoor.html
@@ -46,9 +46,7 @@
     <!--Slideshow section, different images of trail -->
     <div class="container">
       <div>
-        <br>
-        <h2>Explore the Exmoor National Park below:</h2>
-        <br>
+        <h2>Explore Exmoor National Park below:</h2>
         <!--code adapted from w3s schools-->
       </div>
     </div>
@@ -73,7 +71,6 @@
       <span class="dot"></span>
       <span class="dot"></span>
     </div>
-    <br>
     
     <!--map, displays location of the trail-->
     <section>
@@ -82,7 +79,6 @@
       <div class="map-custom">
       </div>
     </section>
-    <br>
     
     <!--Bottom navigation, for user flexibility-->
     <section class="bottom-nav">
