--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <!--Jquery-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <!--Navigation, slideshow, scroll& text JS-->
+    <!--Navigation, slideshow, homepage map, scroll& text JS-->
     <script src="scripts/js/app.js"></script>
     <!--Map API key-->
     <script async defer
