Remove unused slideshow class

--- a/cheddar-gorge.html
+++ b/cheddar-gorge.html
@@ -50,15 +50,15 @@
     </div>
     <br>
     <div class="slideshow-container">
-      <div class="mySlides fade">
+      <div class="mySlides">
         <div class="numbertext">1 / 3</div>
         <img src="assets/images/slideshow/gorge/gorge01.jpg" alt="Cheddar Gorge">
       </div>
-      <div class="mySlides fade">
+      <div class="mySlides">
         <div class="numbertext">2 / 3</div>
         <img src="assets/images/slideshow/gorge/gorge02.jpg" alt="Cheddar Gorge">
       </div>
-      <div class="mySlides fade">
+      <div class="mySlides">
         <div class="numbertext">3 / 3</div>
         <img src="assets/images/slideshow/gorge/gorge03.jpg" alt="Cheddar Gorge">
       </div>
