--- a/staple.html
+++ b/staple.html
@@ -50,15 +50,15 @@
     <!--code adapted from w3s schools-->
     <br>
     <div class="slideshow-container">
-      <div class="mySlides fade">
+      <div class="mySlides">
         <div class="numbertext">1 / 3</div>
         <img src="assets/images/slideshow/staple/staple01.jpg" alt="Staple Hill">
       </div>
-      <div class="mySlides fade">
+      <div class="mySlides">
         <div class="numbertext">2 / 3</div>
         <img src="assets/images/slideshow/staple/staple02.jpg" alt="Staple Hill">
       </div>
-      <div class="mySlides fade">
+      <div class="mySlides">
         <div class="numbertext">3 / 3</div>
         <img src="assets/images/slideshow/staple/staple03.jpg" alt="Staple Hill">
       </div>
