--- a/blagdon.html
+++ b/blagdon.html
@@ -50,15 +50,15 @@
     </div>
     <br>
     <div class="slideshow-container">
-      <div class="mySlides fade">
+      <div class="mySlides">
         <div class="numbertext">1 / 3</div>
         <img src="assets/images/slideshow/blagdon/blagdon01.jpg" alt="Blagdon Lake">
       </div>
-      <div class="mySlides fade">
+      <div class="mySlides">
         <div class="numbertext">2 / 3</div>
         <img src="assets/images/slideshow/blagdon/blagdon02.jpg" alt="Blagdon Lake">
       </div>
-      <div class="mySlides fade">
+      <div class="mySlides">
         <div class="numbertext">3 / 3</div>
         <img src="assets/images/slideshow/blagdon/blagdon03.jpg" alt="Blagdon Lake">
       </div>
