--- a/exmoor.html
+++ b/exmoor.html
@@ -49,15 +49,15 @@
     </div>
     <br>
     <div class="slideshow-container">
-      <div class="mySlides fade">
+      <div class="mySlides">
         <div class="numbertext">1 / 3</div>
         <img src="assets/images/slideshow/exmoor/exmoor01.jpg" alt="Exmoor National Park">
       </div>
-      <div class="mySlides fade">
+      <div class="mySlides">
         <div class="numbertext">2 / 3</div>
         <img src="assets/images/slideshow/exmoor/exmoor02.jpg" alt="Exmoor National Park">
       </div>
-      <div class="mySlides fade">
+      <div class="mySlides">
         <div class="numbertext">3 / 3</div>
         <img src="assets/images/slideshow/exmoor/exmoor03.jpg" alt="Exmoor National Park">
       </div>
