--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <!--Favicon, site icon-->
     <link id="favicon" rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
   </head>
+  <!--please visit readme.md for resource credits-->
   <body>
-    <!--please visit readme.md for resource credits-->
       <!--Navigation, at the top of page for ease of use-->
     <nav class="topnav">
       <a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
@@ -49,36 +49,36 @@
     <!--code adapted from w3s schools-->
     <br>
     <div class="slideshow-container">
-      <div class="mySlides fade">
-        <div class="numbertext">2 / 6</div>
+      <div class="mySlides">
+        <div class="numbertext">1 / 5</div>
         <img src="assets/images/slideshow/staple/staple02.jpg" alt="Staple Hill">
         <div class="container">
           <button class="btn" onclick="document.location = 'staple.html'">View here: Staple Hill</button>
         </div>
       </div>
-      <div class="mySlides fade">
-        <div class="numbertext">3 / 6</div>
+      <div class="mySlides">
+        <div class="numbertext">2 / 5</div>
         <img src="assets/images/slideshow/gorge/gorge02.jpg" alt="Cheddar Gorge">
         <div class="container">
           <button class="btn" onclick="document.location = 'cheddar-gorge.html'">View here: Cheddar Gorge</button>
         </div>
       </div>
-      <div class="mySlides fade">
-        <div class="numbertext">4 / 6</div>
+      <div class="mySlides">
+        <div class="numbertext">3 / 5</div>
         <img src="assets/images/slideshow/blagdon/blagdon03.jpg" alt="Blagdon Lake">
         <div class="container">
           <button class="btn" onclick="document.location = 'blagdon.html'">View here: Blagdon Lake</button>
         </div>
       </div>
-      <div class="mySlides fade">
-        <div class="numbertext">5 / 6</div>
+      <div class="mySlides">
+        <div class="numbertext">4 / 5</div>
         <img src="assets/images/slideshow/coastal/coastal-path03.jpg" alt="Somerset Coastal Path">
         <div class="container">
           <button class="btn" onclick="document.location = 'somerset-coastal.html'">View here: Somerset Coastal Path</button>
         </div>
       </div>
-      <div class="mySlides fade">
-        <div class="numbertext">6 / 6</div>
+      <div class="mySlides">
+        <div class="numbertext">5 / 5</div>
         <img src="assets/images/slideshow/exmoor/exmoor03.jpg" alt="Exmoor National Park">
         <div class="container">
           <button class="btn" onclick="document.location = 'exmoor.html'">View here: Exmoor National Park</button>
