--- a/somerset-coastal.html
+++ b/somerset-coastal.html
@@ -50,15 +50,15 @@
     <!--code adapted from w3s schools-->
     <br>
     <div class="slideshow-container">
-      <div class="mySlides fade">
+      <div class="mySlides">
         <div class="numbertext">1 / 3</div>
         <img src="assets/images/slideshow/coastal/coastal-path01.jpg" alt="Somerset Coastal Path">
       </div>
-      <div class="mySlides fade">
+      <div class="mySlides">
         <div class="numbertext">2 / 3</div>
         <img src="assets/images/slideshow/coastal/coastal-path02.jpg" alt="Somerset Coastal Path">
       </div>
-      <div class="mySlides fade">
+      <div class="mySlides">
         <div class="numbertext">3 / 3</div>
         <img src="assets/images/slideshow/coastal/coastal-path03.jpg" alt="Somerset Coastal Path">
       </div>
