--- a/somerset-coastal.html
+++ b/somerset-coastal.html
@@ -64,6 +64,7 @@
       </div>
     </div>
     <br>
+    <!--highlight current slide-->
     <div style="text-align:center">
       <span class="dot"></span>
       <span class="dot"></span>
