--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="x-ua-compatible" content="IE=edge">
@@ -13,136 +14,142 @@
     <title>Somerset Trails</title>
     <!--Favicon, site icon-->
     <link id="favicon" rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
-  </head>
-  <!--please visit readme.md for resource credits-->
-  <body>
-      <!--Navigation, at the top of page for ease of use-->
+</head>
+<!--please visit readme.md for resource credits-->
+
+<body>
+    <!--Navigation, at the top of page for ease of use-->
     <nav class="topnav">
-      <a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
-      <div class="dropdown">
-        <button class="dropbtn">Somerset Trails
-        <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content">
-          <a href="staple.html" title="Staple Hill">Staple Hill</a>
-          <a href="cheddar-gorge.html" title="Cheddar Gorge">Cheddar Gorge</a>
-          <a href="blagdon.html" title="Blagdon Lake">Blagdon Lake</a>
-          <a href="somerset-coastal.html" title="Somerset Coastal Path">Somerset Coastal Path</a>
-          <a href="exmoor.html" title="Exmoor National Park">Exmoor National park</a>
+        <a href="index.html" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
+        <div class="dropdown">
+            <button class="dropbtn">Somerset Trails
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="staple.html" title="Staple Hill">Staple Hill</a>
+                <a href="cheddar-gorge.html" title="Cheddar Gorge">Cheddar Gorge</a>
+                <a href="blagdon.html" title="Blagdon Lake">Blagdon Lake</a>
+                <a href="somerset-coastal.html" title="Somerset Coastal Path">Somerset Coastal Path</a>
+                <a href="exmoor.html" title="Exmoor National Park">Exmoor National park</a>
+            </div>
         </div>
-      </div>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </nav>
     <!--cover picture, welcome to page-->
     <section class="banner">
-      <div class="banner-outer">
-        <br>
-        <h4>Explore the best trails one step at a time</h4>
-      </div>
+        <div class="banner-outer">
+            <br>
+            <h4>Explore the best trails one step at a time</h4>
+        </div>
     </section>
     <!--Slideshow, display trails& user access-->
     <div class="container">
-      <div>
-        <h2>Explore the trails below</h2>
-      </div>
+        <div>
+            <h2>Explore the trails below</h2>
+        </div>
     </div>
     <!--code adapted from w3s schools-->
     <br>
     <div class="slideshow-container">
-      <div class="mySlides">
-        <div class="numbertext">1 / 5</div>
-        <img src="assets/images/slideshow/staple/staple02.jpg" alt="Staple Hill">
-        <div class="container">
-          <button class="btn" onclick="document.location = 'staple.html'">View here: Staple Hill</button>
+        <div class="mySlides">
+            <div class="numbertext">1 / 5</div>
+            <img src="assets/images/slideshow/staple/staple02.jpg" alt="Staple Hill">
+            <div class="container">
+                <button class="btn" onclick="document.location = 'staple.html'">View here: Staple Hill</button>
+            </div>
         </div>
-      </div>
-      <div class="mySlides">
-        <div class="numbertext">2 / 5</div>
-        <img src="assets/images/slideshow/gorge/gorge02.jpg" alt="Cheddar Gorge">
-        <div class="container">
-          <button class="btn" onclick="document.location = 'cheddar-gorge.html'">View here: Cheddar Gorge</button>
+        <div class="mySlides">
+            <div class="numbertext">2 / 5</div>
+            <img src="assets/images/slideshow/gorge/gorge02.jpg" alt="Cheddar Gorge">
+            <div class="container">
+                <button class="btn" onclick="document.location = 'cheddar-gorge.html'">View here: Cheddar Gorge</button>
+            </div>
         </div>
-      </div>
-      <div class="mySlides">
-        <div class="numbertext">3 / 5</div>
-        <img src="assets/images/slideshow/blagdon/blagdon03.jpg" alt="Blagdon Lake">
-        <div class="container">
-          <button class="btn" onclick="document.location = 'blagdon.html'">View here: Blagdon Lake</button>
+        <div class="mySlides">
+            <div class="numbertext">3 / 5</div>
+            <img src="assets/images/slideshow/blagdon/blagdon03.jpg" alt="Blagdon Lake">
+            <div class="container">
+                <button class="btn" onclick="document.location = 'blagdon.html'">View here: Blagdon Lake</button>
+            </div>
         </div>
-      </div>
-      <div class="mySlides">
-        <div class="numbertext">4 / 5</div>
-        <img src="assets/images/slideshow/coastal/coastal-path03.jpg" alt="Somerset Coastal Path">
-        <div class="container">
-          <button class="btn" onclick="document.location = 'somerset-coastal.html'">View here: Somerset Coastal Path</button>
+        <div class="mySlides">
+            <div class="numbertext">4 / 5</div>
+            <img src="assets/images/slideshow/coastal/coastal-path03.jpg" alt="Somerset Coastal Path">
+            <div class="container">
+                <button class="btn" onclick="document.location = 'somerset-coastal.html'">View here: Somerset Coastal
+                    Path</button>
+            </div>
         </div>
-      </div>
-      <div class="mySlides">
-        <div class="numbertext">5 / 5</div>
-        <img src="assets/images/slideshow/exmoor/exmoor03.jpg" alt="Exmoor National Park">
-        <div class="container">
-          <button class="btn" onclick="document.location = 'exmoor.html'">View here: Exmoor National Park</button>
+        <div class="mySlides">
+            <div class="numbertext">5 / 5</div>
+            <img src="assets/images/slideshow/exmoor/exmoor03.jpg" alt="Exmoor National Park">
+            <div class="container">
+                <button class="btn" onclick="document.location = 'exmoor.html'">View here: Exmoor National Park</button>
+            </div>
         </div>
-      </div>
     </div>
     <br>
     <!--Inform user which slide is active-->
     <div style="text-align:center">
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
     </div>
     <!--Map section, display location-->
     <section>
-      <h2>Somerset Map</h2>
-      <br>
-      <div class="map-custom">
-      </div>
+        <h2>Somerset Map</h2>
+        <br>
+        <div class="map-custom">
+        </div>
     </section>
     <!--Bottom navigation, access different pages.-->
     <section class="bottom-nav">
-      <h6>Our trails</h6>
-      <!--Code adapted from ws3 schools-->
-      <div class="dropup">
-        <button class="dropbtn">Explore</button>
-        <div class="dropup-content">
-          <a href="staple.html" title="Staple Hill">Staple Hill</a>
-          <a href="cheddar-gorge.html" title="Cheddar Gorge">Cheddar Gorge</a>
-          <a href="blagdon.html" title="Blagdon Lake">Blagdon Lake</a>
-          <a href="somerset-coastal.html" title="West Somerset Coastal Path">West Somerset Coastal Path</a>
-          <a href="exmoor.html" title="Exmoor National Park">Exmoor National Park</a>
+        <h6>Our trails</h6>
+        <!--Code adapted from ws3 schools-->
+        <div class="dropup">
+            <button class="dropbtn">Explore</button>
+            <div class="dropup-content">
+                <a href="staple.html" title="Staple Hill">Staple Hill</a>
+                <a href="cheddar-gorge.html" title="Cheddar Gorge">Cheddar Gorge</a>
+                <a href="blagdon.html" title="Blagdon Lake">Blagdon Lake</a>
+                <a href="somerset-coastal.html" title="West Somerset Coastal Path">West Somerset Coastal Path</a>
+                <a href="exmoor.html" title="Exmoor National Park">Exmoor National Park</a>
+            </div>
         </div>
-      </div>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
     </section>
     <!--Scroll back to top button, ease of use-->
     <div>
-      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-      <!--code adapted from w3s schools-->
+        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+        <!--code adapted from w3s schools-->
     </div>
     <!--Footer section, social media& page end-->
     <footer class="footer">
         <div class="other-trails">
-          <span><img title="Somerset Trails" class="logo" src="https://c0.wallpaperflare.com/preview/461/570/413/exmoor-pony-pony-horse-exmoor.jpg" alt="Site logo"></span>
-          <span><a href="index.html" title="Home"
-            rel="noopener"><i class="fa fa-home"></i></a></span>
-          <span><a href="https://www.facebook.com/" title="Facebook"
-            rel="noopener"><i class="fab fa-facebook-square"></i></a></span>
-          <span><a href="https://twitter.com/explore" title="Twitter"
-            rel="noopener"><i class="fab fa-twitter-square"></i></a></span>
-      </div>
+            <span><img title="Somerset Trails" class="logo"
+                    src="https://c0.wallpaperflare.com/preview/461/570/413/exmoor-pony-pony-horse-exmoor.jpg"
+                    alt="Site logo"></span>
+            <span><a href="index.html" title="Home" rel="noopener"><i class="fa fa-home"></i></a></span>
+            <span><a href="https://www.facebook.com/" title="Facebook" rel="noopener"><i
+                        class="fab fa-facebook-square"></i></a></span>
+            <span><a href="https://twitter.com/explore" title="Twitter" rel="noopener"><i
+                        class="fab fa-twitter-square"></i></a></span>
+        </div>
     </footer>
     <!--scripts-->
     <script class="map-custom"></script>
     <!--Jquery-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!--Navigation, slideshow, homepage map, scroll& text JS-->
-    <script src="scripts/js/app.js"></script>
+    <script src="scripts/js/app.js">
+    </script>
     <!--Map API key-->
     <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8&callback=initMap"></script>
-  </body>
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwkm-Zl_LpT63IFWXzmGhS8i6vZFf9dM8&callback=initMap">
+        </script>
+</body>
+
 </html>
